# MinimalTFFDintPy

./: .gitignore  fdint_core.py  pyproject.toml  requirements.txt
FDint_JAX/: __init__.py
FDint_PyTorch/: __init__.py
examples/: generalised_TF.py
tests/: FDINT_values.csv  test_FDint_JAX.py  test_FDint_PyTorch.py
