[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimaltffdintpy"
version = "0.1.3"
description = "Fukushima-style Fermi-Dirac integral approximations for JAX and PyTorch"
requires-python = ">=3.9"
license = {text = "UNLICENSED"}
authors = [{name = "Aidan Crilly"}]
dependencies = [
    "jax",
    "torch",
    "torchvision",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["FDint_JAX", "FDint_PyTorch"]
py-modules = ["fdint_core"]
